Added images for pasta maker

--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -224,16 +224,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Design">
+                <div class="nk-isotope-item" data-filter="CAD">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="pasta.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-9-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/Pasta/rendered.png');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Clean &amp; Groovy</h2>
-                                <div class="portfolio-item-category">Design</div>
+                                <h2 class="portfolio-item-title h3">Pasta Maker</h2>
+                                <div class="portfolio-item-category">CAD</div>
                             </div>
                         </div>
                     </div>
