--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -256,16 +256,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Print">
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="psyche.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-8-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/Oil/Psyche/Step6.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">White T-Shirt</h2>
-                                <div class="portfolio-item-category">Print</div>
+                                <h2 class="portfolio-item-title h3">Psyche</h2>
+                                <div class="portfolio-item-category">Oil Paint</div>
                             </div>
                         </div>
                     </div>
