--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -272,16 +272,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Branding">
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="charcoal-lady.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-2-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/Charcoal/Lady/Step4.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Business Card</h2>
-                                <div class="portfolio-item-category">Branding</div>
+                                <h2 class="portfolio-item-title h3">Charles Bargue</h2>
+                                <div class="portfolio-item-category">Charcoal</div>
                             </div>
                         </div>
                     </div>
