Added images for malibu sunset

--- a/New/index.html
+++ b/New/index.html
@@ -397,57 +397,17 @@
                     </div>
                 </div>
 
-
-                <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="charcoal-lady.html" class="nk-portfolio-item-link"></a>
-                        <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Charcoal/Lady/Step4.jpg');"></div>
-                        </div>
-                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
-                            <div>
-                                <h2 class="portfolio-item-title h3">Charles Bargue</h2>
-                                <div class="portfolio-item-category">Charcoal</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="nk-isotope-item" data-filter="Photography">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
-                        <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-6-sm.jpg');"></div>
-                        </div>
-                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
-                            <div>
-                                <h2 class="portfolio-item-title h3">Heja Stockholm</h2>
-                                <div class="portfolio-item-category">Photography</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="nk-isotope-item" data-filter="Photography">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
-                        <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-12-sm.jpg');"></div>
-                        </div>
-                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
-                            <div>
-                                <h2 class="portfolio-item-title h3">Paper Bag</h2>
-                                <div class="portfolio-item-category">Photography</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
             </div>
             <div class="nk-gap-4 mt-15"></div>
+
+            <!-- START: Pagination -->
+            <div class="nk-pagination nk-pagination-center">
+                <a href="poftfolio.html">Load More Works</a>
+            </div>
+            <!-- END: Pagination -->
+
+
         </div>
         <!-- END: Portfolio -->
 
