--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -288,16 +288,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Photography">
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="malibu-sunset.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-6-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/Acrylic/Malibu Sunset.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Heja Stockholm</h2>
-                                <div class="portfolio-item-category">Photography</div>
+                                <h2 class="portfolio-item-title h3">Malibu Sunset</h2>
+                                <div class="portfolio-item-category">Art Work</div>
                             </div>
                         </div>
                     </div>
@@ -319,15 +319,64 @@
                     </div>
                 </div>
 
+                <div class="nk-isotope-item" data-filter="Mockup">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/BreakInequality/HomePageBreakInequality.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Maer Jono</h2>
+                                <div class="portfolio-item-category">Mockup</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Aquabicylinder/prototype.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">AquaBicylinder</h2>
+                                <div class="portfolio-item-category">Design</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="nk-isotope-item" data-filter="Circuits">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Slot Machine</h2>
+                                <div class="portfolio-item-category">Circuits</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
 
             <div class="nk-gap-4"></div>
         </div>
 
         <!-- START: Pagination -->
-        <div class="nk-pagination nk-pagination-center">
-            <a href="#">Load More Works</a>
-        </div>
+        <!-- <div class="nk-pagination nk-pagination-center">
+            <a href="poftfolio.html">Load More Works</a>
+        </div> -->
         <!-- END: Pagination -->
 
 
