--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -170,6 +170,7 @@
                 <li data-filter="CAD">CAD</li>
                 <li data-filter="Circuits">Circuits</li>
                 <li data-filter="Mockup">Mockup</li>
+                <li data-filter="Pottery">Pottery</li>
             </ul>
             <!-- END: Filter -->
 
@@ -304,16 +305,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Photography">
+                <div class="nk-isotope-item" data-filter="Pottery">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="pottery.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-12-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/Pottery/Step4.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Paper Bag</h2>
-                                <div class="portfolio-item-category">Photography</div>
+                                <h2 class="portfolio-item-title h3">Wheel Throwing</h2>
+                                <div class="portfolio-item-category">Pottery</div>
                             </div>
                         </div>
                     </div>
