Added images for cb hand

--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -320,16 +320,16 @@
                     </div>
                 </div>
 
-                <div class="nk-isotope-item" data-filter="Mockup">
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
+                        <a href="pencil-hand.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/BreakInequality/HomePageBreakInequality.jpg');"></div>
+                            <div style="background-image: url('assets/img/Pencil/CB Hand.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Maer Jono</h2>
-                                <div class="portfolio-item-category">Mockup</div>
+                                <h2 class="portfolio-item-title h3">Charles Bargue</h2>
+                                <div class="portfolio-item-category">Pencil</div>
                             </div>
                         </div>
                     </div>
