--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -352,7 +352,20 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Circuits">
+                <div class="nk-isotope-item" data-filter="ArtWork">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="moonlight-forest.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Acrylic/Moonlight Forest.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Moonlight Forest</h2>
+                                <div class="portfolio-item-category">Acrylic Paint</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
