--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -336,16 +336,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Design">
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
+                        <a href="rustic-daisy.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Aquabicylinder/prototype.jpg');"></div>
+                            <div style="background-image: url('assets/img/Acrylic/Rustic Daisy.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">AquaBicylinder</h2>
-                                <div class="portfolio-item-category">Design</div>
+                                <h2 class="portfolio-item-title h3">Rustic Daisy</h2>
+                                <div class="portfolio-item-category">Acrylic Paint</div>
                             </div>
                         </div>
                     </div>
