--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -298,7 +298,7 @@
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
                                 <h2 class="portfolio-item-title h3">Malibu Sunset</h2>
-                                <div class="portfolio-item-category">Art Work</div>
+                                <div class="portfolio-item-category">Acrylic Paint</div>
                             </div>
                         </div>
                     </div>
