--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -366,21 +366,21 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
+                        <a href="red-tulips.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
+                            <div style="background-image: url('assets/img/Acrylic/Red Tulips.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Slot Machine</h2>
-                                <div class="portfolio-item-category">Circuits</div>
+                                <h2 class="portfolio-item-title h3">Red Tulips</h2>
+                                <div class="portfolio-item-category">Acrylic Paint</div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
 
             </div>
 
