--- a/New/index.html
+++ b/New/index.html
@@ -403,7 +403,7 @@
 
             <!-- START: Pagination -->
             <div class="nk-pagination nk-pagination-center">
-                <a href="poftfolio.html">Load More Works</a>
+                <a href="portfolio.html">Load More Works</a>
             </div>
             <!-- END: Pagination -->
 
