Changed load more works spacin

--- a/New/index.html
+++ b/New/index.html
@@ -399,7 +399,7 @@
 
             </div>
             </div>
-            <div class="nk-gap-4 mt-15"></div>
+            <!-- <div class="nk-gap-4 mt-15"></div> -->
 
             <!-- START: Pagination -->
             <div class="nk-pagination nk-pagination-center">
@@ -407,7 +407,7 @@
             </div>
             <!-- END: Pagination -->
 
-
+             <div class="nk-gap-4 mt-15"></div>
         </div>
         <!-- END: Portfolio -->
 
