Added content for maer jono

--- a/New/maer-jono.html
+++ b/New/maer-jono.html
@@ -166,8 +166,51 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <h3 class="nk-portfolio-title">Background</h3>
+                                <p>
+                                    There are many pregnant woman in rural communities that do not have the proper access to health care supplies or trained personnel.  The lack of healthcare resources can result in a high mortality rate for the mothers and the newborns. With the statistics given from Maternal, Newborn, and Child Heath (MNCH) considers these patients to be at high-risk.
+                                </p>
+                                <h3 class="nk-portfolio-title">Solution</h3>
+                                <p>
+                                    In valuing time as a currency, our solution is to highlight and establish the risks associated with each patient and treating them with to treat their individual needs.                                        
+                                </p>
+                                <h3 class="nk-portfolio-title">Goal</h3>
+                                <p>
+                                    The goal for the application is to assist the health care workers by giving them more information about specific women. The application should improve the quality of service and infant delivery rates for the women and their children.
+                                </p>
+                                <h3 class="nk-portfolio-title">Features</h3>
+                                <p>
+                                        Login Page keeps each workers information separate and corporation data in one place.
+                                        List of Patients with dates keeps the organization to plan the day accordingly.
+                                        Individual Profile keeps a quick update for each patient to review before giving help.
+                                        With multiple clients, map allows fasted directions to each patient for simple travel.                                        
+                                </p>
+                                <h3 class="nk-portfolio-title">Use</h3>
+                                <p>                                        
+                                        Simple application to organize health workers clients to simplify the process and timeline for each patient.                                         
+                                        The workers must record patients needs, risks, health concerns for constant check-ups to store information in single location.                                         
+                                        Application gives means of instant communication between workers and patients during emergencies.
+                                </p>                        
+                                <h3 class="nk-portfolio-title">Constraints</h3>
+                                    <h5>Pregnant Women</h5>
+                                    <p>
+                                        In the rural parts of the country not all women have the skills to read and write. 
+                                        At the bottom, when the patient is first met, a worker accesses their literacy and speaking. 
+                                        This allows for calls or messages to be sent based on the easiest communication for the woman. 
+                                    </p>
+                                    <h5>Health Care Workers</h5>
+                                    <p>
+                                        Health Care workers are not fully trained. They have the ability to walk through application to record and find information.
+                                        The workers must travel to the rural communities, the map can provide directions to arrive at their destination by address of patient.
+                                    </p>
+                                <h3 class="nk-portfolio-title">Menus</h3>
+                                <p>
+                                        Settings Menu allows Health Care Workers to switch between users and/or logout when their shift is complete.
+                                        Filters menu allows Health Care Workers to switch between the order of their patients depending on their location. It is optimal to take the path that is shortest to order each patient. If rated after giving birth, a woman can be risked for post partum and get the help she needs urgently.
+                                        The pencil on individual portfolios will make the keyboard pop-up for editing their profiles.   
+                                </p>
+                                
+
                             </div>
                         </div>
                     </div>
