Added content for aqua

--- a/New/aquabicylinder.html
+++ b/New/aquabicylinder.html
@@ -166,8 +166,18 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <h3 class="nk-portfolio-title">Background</h3>
+                                <p>
+                                    Many people in rural Uganda and Kenya do not have an efficient, reliable system in place to access water. Often, the population of low income families, specifically women and children, must travel  by foot to fetch water from the nearest source. This task occurs by carrying  jugs or jerry cans. Carrying heavy water containers puts strain on the body, resulting in health problems.  
+                                </p>
+                                <h3 class="nk-portfolio-title">Solution</h3>
+                                <p>
+                                    In valuing time as a currency, our solution is to highlight and establish the factors associated with transporting water efficiently and effectively, while maintaining a healthy body.                                        
+                                </p>
+                                <h3 class="nk-portfolio-title">Goal</h3>
+                                <p>
+                                    To create a durable device that should reduce the negative health effects, decrease the time, and increase the amount of water transported each trip.  
+                                </p>
                             </div>
                         </div>
                     </div>
