Added content for charcoal

--- a/New/charcoal-lady.html
+++ b/New/charcoal-lady.html
@@ -166,8 +166,10 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <h3 class="nk-portfolio-title">Process</h3>
+                                <p>
+                                    This project is also from the drawing book of Charles Bargue. I decided to do this piece of work in black and white charcoal. This process also started with the same techniques as Psyche. Once this step was completed, the next step was the transfer the drawing onto the textured board. Step by step this piece came together by carefully shading from the darkest darks to the lightest lights using black charcoal. The final step was to use the white charcoal to pop out the lightest lights giving the statue texture.
+                                </p>
                             </div>
                         </div>
                     </div>
