Added content for acrylic paints

--- a/New/malibu-sunset.html
+++ b/New/malibu-sunset.html
@@ -166,8 +166,9 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <p>
+                                    This painting was done on a medium size canvas. The painting contains the colours blue, red, black, white, and yellow.
+                                </p>
                             </div>
                         </div>
                     </div>
