--- a/New/pasta.html
+++ b/New/pasta.html
@@ -166,8 +166,9 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <p>
+                                        The project was created as a final project in the Systems Design Graphics Laboratory (SYDE 101L). In this course we learned about SolidWorks and the basics of hand drawn technical drawings. The final project was completed over a few classes, the idea was to create an multiple part assembly of a household tool. 
+                                </p>
                             </div>
                         </div>
                     </div>
