--- a/New/pottery.html
+++ b/New/pottery.html
@@ -166,8 +166,10 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <h3 class="nk-portfolio-title">Process</h3>
+                                <p>
+                                    This project is from a pottery wheel class that I took during last term. During the course we used technique on the wheel to throw cylinders and make them hollow. With this process we were able to use creative ideas to create anything involving these techniques. I created bowls, a mug, pitchers, and an egg cup. First you must wedge the clay (like kneading), this is used to remove air bubbles. While the clay is on the wheel, you use your hands to pull the clay up to create a hollow cylinder giving pressure accordingly for convex and concave walls.
+                                </p>
                             </div>
                         </div>
                     </div>
