Add content for slot-machine

--- a/New/slot-machine.html
+++ b/New/slot-machine.html
@@ -166,8 +166,8 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                    <p>The group project was created as a final project in the Systems Design Digital Systems Laboratory (SYDE 192L). In this course we used an Arduino Uno to create circuits and solve problems. </p>
+                                    <p>The Slot Machine works with a user input which 'spins' values on an LCD screen. The play enters quarters to the amount they want to bet into the slot to complete the circuit. When the play button is hit, the random number generator spins each column for a certain number of seconds. The output of the program uses a timer for the total time of the game, if no button is pressed the game will reset. When the slot machine shows three identical numbers, the slot machine motor will tilt the collection of coins to the winning player! </p>
                             </div>
                         </div>
                     </div>
