Add content for psyche

--- a/New/psyche.html
+++ b/New/psyche.html
@@ -166,8 +166,10 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-                                <p>Nullam lobortis neque turpis, nec tempus sem pharetra at. Donec et quam, ullamcorper velit. Aliquam maximus ullamcorper ligula, at placerat dui hendrerit sed. Sed metus urna, bibendum id tortor, feugiat ipsum. Aliquam vehicula neque sit amet dolor malesuada pretium.</p>
-                                <p>Curabitur tristique, felis ut mattis auctor, elit ante laoreet libero, ac lorem quam vitae libero. Suspen disse aliquet eget risus quis vehicula.</p>
+                                <h3 class="nk-portfolio-title">Process</h3>
+                                <p>
+                                    This project is from the drawing book of Charles Bargue. I decided to do this piece in oil paints. This process started with the outline of the statue in HB pencil to ensure proper proportioning of each section then transferring onto a smooth canvas. Beginning with the outline of features, each layer of paint was carefully placed for a statue effect starting from the darkest paints to the lightest. The colours of paints were chosen to shade the statue as if a candle was the only illumination on the face of the woman. 
+                                </p>
                             </div>
                         </div>
                     </div>
