--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -382,6 +382,21 @@
                     </div>
                 </div>
 
+                <div class="nk-isotope-item" data-filter="ArtWork">
+                        <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                            <a href="dandelion.html" class="nk-portfolio-item-link"></a>
+                            <div class="nk-portfolio-item-image">
+                                <div style="background-image: url('assets/img/Acrylic/Dandelion.jpg');"></div>
+                            </div>
+                            <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                                <div>
+                                    <h2 class="portfolio-item-title h3">Dandelion</h2>
+                                    <div class="portfolio-item-category">Acrylic Paint</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
             </div>
 
             <div class="nk-gap-4"></div>
