Added images for war of the web

--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -209,16 +209,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Circuits">
+                <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
+                        <a href="war-of-the-web.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
+                            <div style="background-image: url('assets/img/WaroftheWeb/board.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Slot Machine</h2>
-                                <div class="portfolio-item-category">Circuits</div>
+                                <h2 class="portfolio-item-title h3">War of the Web</h2>
+                                <div class="portfolio-item-category">Board Game</div>
                             </div>
                         </div>
                     </div>
@@ -267,6 +267,22 @@
                             <div>
                                 <h2 class="portfolio-item-title h3">Psyche</h2>
                                 <div class="portfolio-item-category">Oil Paint</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="nk-isotope-item" data-filter="Circuits">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Slot Machine</h2>
+                                <div class="portfolio-item-category">Circuits</div>
                             </div>
                         </div>
                     </div>
