Added content for WaroftheWeb

--- a/New/war-of-the-web.html
+++ b/New/war-of-the-web.html
@@ -166,7 +166,38 @@
                     <div class="col-lg-8">
                         <div class="nk-portfolio-info">
                             <div class="nk-portfolio-text">
-          
+                                <h3 class="nk-portfolio-title">Introduction</h3>
+                                <p>
+                                    <i>War of the Web</i>  is a four-player board game designed to address the issue of internet personal data security. Personal data security is now a growing concern where the amount of data stored online is increasing daily while there are many hostile groups trying to illegally access this data for destructive purposes, such as financial gain. User data has become a new currency to many companies, including online shopping and social media platforms, and even governments. Internet consumers can often be found inputting personal information into a variety of websites on a daily basis.
+                                </p>
+                                <h3 class="nk-portfolio-title">Users</h3>
+                                <p>
+                                    The target (primary) users of this game are internet users between the ages of eight and eighteen, where the core objective is to introduce users aged eight to thirteen to the general idea of data security through a fun and engaging gameplay, and to highlight practical defensive techniques and common hacking schemes for users aged fourteen to eighteen
+                                </p>
+                                <p>
+                                    Secondary and tertiary users of this game include parents of the target users, the government, and antivirus software companies. The game objectives for the parents are to create a fun family-bonding experience while providing the opportunity for parents to further discuss online data security with their children. As for the government and antivirus software companies, the game aims to ultimately reach enough of the demographic to influence an increase in government investment in data security and cause antivirus companies to lower the price of their products.  
+                                </p>
+                                <h3 class="nk-portfolio-title">Features</h3>
+                                <p>
+                                    <li>3-D printed custom die with each face as a web platform associated with slider</li>
+                                    <li>3-D printed sliders for point counter</li>
+                                    <li>3-D printed game pieces</li>
+                                    <li>Event cards with negative effects occuring due to hackers</li>
+                                    <li>Event cards with positive effects occuring due to firewalls, etc.</li>
+                                    <li>Popular web platforms (Twitter, Facebook, Amazon, Netlfix, Healthcare</li>
+                                </p> 
+                                <h3 class="nk-portfolio-title">Rules</h3>
+                                <p>
+                                    Click to view the rules <a href="assets/pdf/WaroftheWeb/Rules1.pdf" target="_blank">here</a>
+                                </p>
+                                <p>
+                                    <img src="assets/img/WaroftheWeb/rulePG1.png" style="height:400px">
+                                    <img src="assets/img/WaroftheWeb/rulePG2.png" style="height:400px">
+                                </p>              
+                                <h3 class="nk-portfolio-title">Future</h3>
+                                <p>
+                                    Moving forward, future work required for this game include more user testing, better game pace control, and better design for manufacturing. When playing the game with university-level peers there was an opportunity to observe gameplay and collect user feedback. While the user testing conducted so far has yielded useful feedback including “the informative cards are too complex for the younger audience”, the game has yet to be testing with the actual target audience, who would be internet users aged eight to eighteen. It is projected that one of the greatest challenges would be presenting the educational material in a language that all ages can understand and gain knowledge from. Testing with users of our target age is necessary to learn more about them and make effective improvements. A possible solution is to include the definitions and explanations of the introduced terms for added clarification, as well as providing the more curious users with credible resources for further research.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -195,6 +226,18 @@
                                 </td>
                             </tr> -->
                         </table>
+                        <br/>
+                        <p>
+                            <img src="assets/img/WaroftheWeb/Survey/knowledge.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/techniquesToProtect-Before.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/techniquesToProtect-After.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/techniquesToHack-Before.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/techniquesToHack-After.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/catersToAgeGroups.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/concerns.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/informativeLevel.png" style="height:200px">
+                            <img src="assets/img/WaroftheWeb/Survey/favouritePart.png" style="height:200px">
+                        </p>
                     </div>
                 </div>
                 <div class="nk-gap-4 mt-14"></div>
