Added heading image and text

--- a/New/index.html
+++ b/New/index.html
@@ -101,7 +101,7 @@
 -->
     <nav class="nk-navbar nk-navbar-full nk-navbar-align-center" id="nk-nav-mobile">
         <div class="nk-navbar-bg">
-            <div class="bg-image" style="background-image: url('assets/images/bg-menu.jpg')"></div>
+            <div class="bg-image" style="background-image: url('assets/img/2.jpg')"></div>
         </div>
         <div class="nk-nav-table">
             <div class="nk-nav-row">
@@ -155,19 +155,19 @@
         <!-- START: Header Title -->
         <div class="nk-header-title nk-header-title-full">
             <div class="bg-image">
-                <div style="background-image: url('assets/images/home-7.jpg');"></div>
+                <div style="background-image: url('assets/img/2.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.6);"></div>
             </div>
             <div class="nk-header-table">
                 <div class="nk-header-table-cell">
                     <div class="container">
 
-                        <h2 class="nk-subtitle text-white">New Branding Agency</h2>
+                        <h2 class="nk-subtitle text-white">Hi! I'm Caitlyn Kodric</h2>
 
 
-                        <h1 class="nk-title display-3 text-white">We are about to change the way
+                        <h1 class="nk-title display-3 text-white">I am a dedicated and enthusiastic individual
                             <br>
-                            <em class="fw-400">you publish on the web</em>
+                            <em class="fw-400">who has a passion for design technology and the outdoors</em>
                         </h1>
 
 
