--- a/New/index.html
+++ b/New/index.html
@@ -53,8 +53,8 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo-light.svg" alt="" width="85" class="nk-nav-logo-onscroll">
-                        <img src="assets/images/logo.svg" alt="" width="85">
+                        <img src="assets/img/Name - WH.svg" alt="" width="125" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Name - BL.svg" alt="" width="125">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
