--- a/New/index.html
+++ b/New/index.html
@@ -110,7 +110,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <img src="assets/images/logo-light.svg" alt="" width="85">
+                                <img src="assets/images/Name - WH.svg" alt="" width="85">
                             </a>
                         </div>
 
