--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -54,8 +54,8 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo-light.svg" alt="" width="85" class="nk-nav-logo-onscroll">
-                        <img src="assets/images/logo.svg" alt="" width="85">
+                        <img src="assets/img/Name - WH.svg" alt="" width="125" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Name - BL.svg" alt="" width="125">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
@@ -102,7 +102,7 @@
 -->
     <nav class="nk-navbar nk-navbar-full nk-navbar-align-center" id="nk-nav-mobile">
         <div class="nk-navbar-bg">
-            <div class="bg-image" style="background-image: url('assets/images/bg-menu.jpg')"></div>
+            <div class="bg-image" style="background-image: url('assets/img/2.jpg')"></div>
         </div>
         <div class="nk-nav-table">
             <div class="nk-nav-row">
@@ -111,7 +111,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <img src="assets/images/logo-light.svg" alt="" width="85">
+                                <img src="assets/img/Name - WH.svg" alt="" width="85">
                             </a>
                         </div>
 
