Added info text to projects

--- a/New/index.html
+++ b/New/index.html
@@ -285,7 +285,9 @@
             <div class="nk-gap-4 mt-5"></div>
 
             <h2 class="text-xs-center display-4">Projects</h2>
-
+            <p class="text-xs-center">
+                Individul projects pictures coming soon ... 
+            </p>
             <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
