--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -174,6 +174,8 @@
             </ul>
             <!-- END: Filter -->
 
+            <p class="text-xs-center">Individual projects pictures coming soon...</p>
+
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
 
