Added info to index

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
                     <div class="container">
 
                         <h2 class="nk-subtitle text-white">Hi! I'm Caitlyn Kodric</h2>
+                        <h2 class="nk-subtitle text-white">My website is currently a work in progress. Please check back in a few days.</h2>
+                        <h2 class="nk-subtitle text-white">Please check back in a few days.</h2>
 
 
                         <h1 class="nk-title display-3 text-white">I am a dedicated and enthusiastic individual
