Change tag_image caps
.JPG -> .jpg image 2

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 -->
     <nav class="nk-navbar nk-navbar-full nk-navbar-align-center" id="nk-nav-mobile">
         <div class="nk-navbar-bg">
-            <div class="bg-image" style="background-image: url('assets/img/2.JPG')"></div>
+            <div class="bg-image" style="background-image: url('assets/img/2.jpg')"></div>
         </div>
         <div class="nk-nav-table">
             <div class="nk-nav-row">
