Changed JPG to jpg

--- a/blog-single.html
+++ b/blog-single.html
@@ -248,7 +248,7 @@
                             <div class="nk-comment">
                                 <div class="nk-comment-avatar">
                                     <a href="#">
-                                        <img src="assets/images/avatar-2.JPG" alt="">
+                                        <img src="assets/images/avatar-2.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="nk-comment-meta">
