--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 -->
     <nav class="nk-navbar nk-navbar-full nk-navbar-align-center" id="nk-nav-mobile">
         <div class="nk-navbar-bg">
-            <div class="bg-image" style="background-image: url('assets/img/2.JPG')"></div>
+            <div class="bg-image" style="background-image: url('assets/img/2.jpg')"></div>
         </div>
         <div class="nk-nav-table">
             <div class="nk-nav-row">
@@ -155,7 +155,7 @@
         <!-- START: Header Title -->
         <div class="nk-header-title nk-header-title-full">
             <div class="bg-image">
-                <div style="background-image: url('assets/img/2.JPG');"></div>
+                <div style="background-image: url('assets/img/2.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.6);"></div>
             </div>
             <div class="nk-header-table">
