Commented code to allow filtering

--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
             </ul>
             <!-- END: Filter -->
 
-            <p class="text-xs-center">Individual projects pictures coming soon...</p>
+            <!-- <p class="text-xs-center">Individual projects pictures coming soon...</p> -->
 
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
